corrected layout bug

--- a/styles/_top-cover.scss
+++ b/styles/_top-cover.scss
@@ -16,8 +16,9 @@
 }
 
 #cover__front {
-	background: none;
 	margin-top: 4rem;
+	margin-bottom: 0;
+	background: none;
 	display: flex;
 	height: 50vh;
 
